--- a/layouts/home.html
+++ b/layouts/home.html
@@ -8,7 +8,14 @@
     </header>
     <div class="homepage-content">
         <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
-        {{.Content}}
+        <div class="title">Vijay Pemmaraju</div>
+        <div class="subtitle">Developer & Musician</div>
+
+        <div class="links">
+            <a class="link" href="https://github.com/vijaypemmaraju" target="_blank" rel="noopener"><img src="/github.png"></img></a>
+            |
+            <a class="link" href="https://soundcloud.com/manas-music/tracks" target="_blank" rel="noopener"><img src="/soundcloud.png"></img></a>
+        </div>
     </div>
     <div>
         {{ range first 10 .Site.RegularPages }}
