--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,26 +1,37 @@
 {{ define "main" }}
 <main aria-role="main">
-    <header class="homepage-header">
-        <h1>{{.Title}}</h1>
-        {{ with .Params.subtitle }}
-        <span class="subtitle">{{.}}</span>
-        {{ end }}
-    </header>
-    <div class="homepage-content">
-        <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
-        <div class="title">Vijay Pemmaraju</div>
-        <div class="subtitle">Developer & Musician</div>
+  <header class="homepage-header">
+    <h1>{{.Title}}</h1>
+    {{ with .Params.subtitle }}
+    <span class="subtitle">{{.}}</span>
+    {{ end }}
+  </header>
+  <div class="homepage-content">
+    <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
+    <div class="title">Vijay Pemmaraju</div>
+    <div class="subtitle">Developer & Musician</div>
 
-        <div class="links">
-            <a class="link" href="https://github.com/vijaypemmaraju" target="_blank" rel="noopener"><img src="/github.png"></img></a>
-            |
-            <a class="link" href="https://soundcloud.com/manas-music/tracks" target="_blank" rel="noopener"><img src="/soundcloud.png"></img></a>
-        </div>
+    <div class="links">
+      <a
+        class="link"
+        href="https://github.com/vijaypemmaraju"
+        target="_blank"
+        rel="noopener"
+      >
+        <img width="24" height="24" src="/github.svg" />
+      </a>
+      |
+      <a
+        class="link"
+        href="https://soundcloud.com/manas-music/tracks"
+        target="_blank"
+        rel="noopener"
+        ><img width="24" height="24" src="/soundcloud.svg" />
+      </a>
     </div>
-    <div>
-        {{ range first 10 .Site.RegularPages }}
-        {{ .Render "summary"}}
-        {{ end }}
-    </div>
+  </div>
+  <div>
+    {{ range first 10 .Site.RegularPages }} {{ .Render "summary"}} {{ end }}
+  </div>
 </main>
 {{ end }}
