Style the shit out of everything and add blogpost

--- a/assets/scss/_color.scss
+++ b/assets/scss/_color.scss
@@ -1,5 +1,6 @@
-$_PRIMARY: rgb(12, 107, 165);
+$_PRIMARY: #232C52;
 $_WHITE: rgb(240, 240, 240);
+$_LIGHT_GRAY: rgb(200, 200, 200);
 $_BLACK: rgb(45, 45, 45);
 
 @function color($type: unspecified) {
