--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,33 +1,59 @@
 @import "./reset";
 
 body {
+  overflow-x: hidden;
+  background-color: $_WHITE;
+}
+
+.top-nav {
+  width: 100vw;
+  height: 50px;
+  background-color: $_PRIMARY;
   display: flex;
   align-items: center;
   justify-content: center;
-
-  overflow-x: hidden;
+  color: $_WHITE;
 }
+
+.top-nav-inner {
+  display: flex;
+  align-items: center;
+  width: 750px;
+}
+
 
 .title {
   font-size: 24px;
   font-weight: 500;
-  padding: 12px;
   text-align: center;
+  padding: 24px;
+  color: $_WHITE;
 }
 
-.subtitle {
-  color: gray;
-  font-size: 14px;
-  padding-bottom: 4px;
-  text-align: center;
-}
-
-.links {
+.icons {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 4px;
+}
+
+.icon {
+  padding: 8px;
 }
 
 .link {
-  padding: 8px;
+  padding: 12px;
+}
+
+.link:link {
+  color: $_LIGHT_GRAY;
+}
+
+.link:visited {
+  color: $_LIGHT_GRAY;
+}
+
+p {
+  margin-block-start: 0.75em;
+  margin-block-end: 0.75em;
 }
