Style links and blockquotes

--- a/assets/scss/_color.scss
+++ b/assets/scss/_color.scss
@@ -1,6 +1,7 @@
 $_PRIMARY: #232C52;
 $_WHITE: rgb(240, 240, 240);
 $_LIGHT_GRAY: rgb(200, 200, 200);
+$_MEDIUM_GRAY:rgb(150, 150, 150);
 $_BLACK: rgb(45, 45, 45);
 
 @function color($type: unspecified) {
