--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -41,6 +41,15 @@ body {
   padding: 8px;
 }
 
+
+a:link {
+  color: #9E2600;
+}
+
+a:visited {
+  color: #9E2600;
+}
+
 .link {
   padding: 12px;
 }
@@ -56,4 +65,8 @@ body {
 p {
   margin-block-start: 0.75em;
   margin-block-end: 0.75em;
+}
+
+blockquote {
+  color: $_MEDIUM_GRAY;
 }
