Add game developer

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -28,6 +28,8 @@
 
                 <p>Musician</p>
 
+                <p>Game Developer</p>
+
                 <p>He/Him</p>
             </div>
         </div>
