--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,4 +19,26 @@ import Bento from "../components/Bento";
     font-size: 20px;
     line-height: 1.6;
   }
+  /* The typing effect */
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+
+    to {
+      width: 100%;
+    }
+  }
+
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from,
+    to {
+      border-color: transparent;
+    }
+
+    50% {
+      border-color: orange;
+    }
+  }
 </style>
