--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,41 +4,38 @@ import Bento from "../components/Bento";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main>
-    <Bento client:visible />
+  <main class="flex justify-center items-center h-screen text-white">
+    <div class="flex justify-cemter items-center">
+      <div
+        class="w-[400px] h-[400px] flex flex-col justify-center items-center gap-2"
+      >
+        <Bento client:visible />
+      </div>
+    </div>
   </main>
+
+  <style>
+    /* The typing effect */
+    @keyframes typing {
+      from {
+        width: 0;
+      }
+
+      to {
+        width: 100%;
+      }
+    }
+
+    /* The typewriter cursor effect */
+    @keyframes blink-caret {
+      from,
+      to {
+        border-color: transparent;
+      }
+
+      50% {
+        border-color: orange;
+      }
+    }
+  </style>
 </Layout>
-
-<style>
-  main {
-    margin: auto;
-    padding: 1rem;
-    width: 800px;
-    max-width: calc(100% - 2rem);
-    color: white;
-    font-size: 20px;
-    line-height: 1.6;
-  }
-  /* The typing effect */
-  @keyframes typing {
-    from {
-      width: 0;
-    }
-
-    to {
-      width: 100%;
-    }
-  }
-
-  /* The typewriter cursor effect */
-  @keyframes blink-caret {
-    from,
-    to {
-      border-color: transparent;
-    }
-
-    50% {
-      border-color: orange;
-    }
-  }
-</style>
