--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="business">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -34,8 +34,6 @@ const { title } = Astro.props;
       }
       html {
         font-family: system-ui, sans-serif;
-        background: #13151a;
-        background-size: 224px;
       }
       code {
         font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
