--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Bento from "../components/Bento";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Vijay Pemmaraju">
   <main class="flex justify-center items-center h-screen text-white">
     <div class="flex justify-cemter items-center">
       <div
