Add fallback for mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Bento from "../components/Bento";
       <div
         class="w-[400px] h-[400px] flex flex-col justify-center items-center gap-2"
       >
-        <Bento client:visible />
+        <Bento client:only />
       </div>
     </div>
   </main>
